# strava-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  SPECIFICATION.md  appveyor.yml  main.cpp  travis.yml
include/: strava.hpp
samples/: CMakeLists.txt
samples/athlete/: main.cpp
samples/curl/: main.cpp
samples/dev/: main.cpp
samples/helloworld/: main.cpp  main.hpp
samples/https/: main.cpp
samples/sample01/: main.cpp
samples/strava-app/: main.hpp
source/: CMakeLists.txt  strava.cpp
source/src/: strava.cpp
tests/: CMakeLists.txt
tests/activity-tests/: main.cpp
tests/athlete-tests/: main.cpp
tests/auth-tests/: main.cpp
tests/club-tests/: main.cpp
tests/efforts-tests/: main.cpp
tests/gear-tests/: main.cpp
tests/race-tests/: main.cpp
tests/route-tests/: main.cpp
tests/segment-tests/: main.cpp
