
include_directories(../include)
include_directories(${LEST_INCLUDE})
include_directories(${OPENSSL_INCLUDE_DIR})
include_directories(${POCO_INCLUDE}/Util/include)
include_directories(${POCO_INCLUDE}/Net/include)
include_directories(${POCO_INCLUDE}/NetSSL_OpenSSL/include)
include_directories(${POCO_INCLUDE}/Crypto/include)
include_directories(${POCO_INCLUDE}/JSON/include)
include_directories(${POCO_INCLUDE}/Foundation/include)

link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
link_directories(${POCO_LIB})

# Add tests written with lest
add_executable(athlete-tests    athlete-tests/main.cpp)
add_executable(activity-tests   activity-tests/main.cpp)
add_executable(club-tests       club-tests/main.cpp)
add_executable(gear-tests       gear-tests/main.cpp)
add_executable(race-tests       race-tests/main.cpp)
add_executable(route-tests      route-tests/main.cpp)
add_executable(segment-tests    segment-tests/main.cpp)
add_executable(stream-tests     stream-tests/main.cpp)
add_executable(upload-tests     upload-tests/main.cpp)
add_executable(webhook-tests    webhook-tests/main.cpp)

target_link_libraries(athlete-tests STRAVA)
target_link_libraries(athlete-tests ${OPENSSL_LIBRARIES})
target_link_libraries(athlete-tests ${OPENSSL_SSL_LIBRARY})
target_link_libraries(athlete-tests ${OPENSSL_CRYPTO_LIBRARY})

# add to ctest
add_test(NAME athlete-tests     COMMAND athlete-tests)
add_test(NAME activity-tests    COMMAND activity-tests)
add_test(NAME club-tests        COMMAND club-tests)
add_test(NAME gear-tests        COMMAND gear-tests)
add_test(NAME race-tests        COMMAND race-tests)
add_test(NAME route-tests       COMMAND route-tests)
add_test(NAME segment-tests     COMMAND segment-tests)
add_test(NAME stream-tests      COMMAND stream-tests)
add_test(NAME upload-tests      COMMAND upload-tests)
add_test(NAME webhook-tests     COMMAND webhook-tests)
